--- a/OOP2/app/src/main/res/layout/activity_main.xml
+++ b/OOP2/app/src/main/res/layout/activity_main.xml
@@ -6,31 +6,35 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <Button
-        android:id="@+id/btn_siswa"
-        android:layout_width="250dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="316dp"
-        android:text="Siswa"
+
+    <TextView
+        android:id="@+id/text_view_note_empty"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Note Empty"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_guru"
-       />
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/btn_guru"
-        android:layout_width="250dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="259dp"
-        android:layout_marginBottom="36dp"
-        android:text="Guru"
-        app:layout_constraintBottom_toTopOf="@+id/btn_siswa"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view_main"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="0dp"
+        tools:listitem="@layout/list_item" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
+        android:clickable="true"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
-
+        app:srcCompat="@drawable/ic_add_white_24dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
