--- a/OOP2/app/src/main/res/layout/list_item.xml
+++ b/OOP2/app/src/main/res/layout/list_item.xml
@@ -31,7 +31,7 @@
             android:layout_height="match_parent"
             android:layout_marginTop="5dp"
             android:ellipsize="end"
-            android:text="" />
+            android:text="@string/lorem" />
 
     </LinearLayout>
 
